# AI-Relationship-Intelligence-Platform

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/app/: __init__.py  main.py
backend/app/api/: assistant.py  auth.py  crm.py  dashboard.py  deliverables.py  graph.py  ingest.py  meetings.py  prompts.py  rag.py  research.py
backend/app/core/: config.py  security.py
backend/app/models/: schemas.py
backend/app/services/: assistant.py  crm.py  dashboard.py  deliverables.py  ingestion.py  llm_router.py  meeting_intelligence.py  prompt_registry.py  rag.py  relationship_graph.py  research.py  storage.py  token_optimizer.py
demo_data/: README.md  crm_seed.csv  prompt_tests.csv
demo_data/expected_outputs/: allocator_followup.json  consultant_intro.json  messy_allocator_notes.json
demo_data/meeting_transcripts/: allocator_followup.txt  consultant_intro.txt  messy_allocator_notes.txt
demo_data/research_docs/: harborview_consultants_notes.md  northstar_public_pension_notes.md
docs/: IRIP_Business_Paper.md  IRIP_Business_Paper_Visual.html  architecture.md  database_schema.sql
scripts/: evaluate_demo_data.py
seed_data/: company_research_notes.md  demo_transcript.txt
streamlit_app/: app.py
tests/: test_assistant.py  test_core_flows.py  test_demo_evaluation.py  test_rag_and_deliverables.py
