[project]
name = "ai-relationship-intelligence-platform"
version = "0.1.0"
description = "Indago AI Relationship Intelligence Platform prototype"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "streamlit>=1.37.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "plotly>=5.23.0",
  "networkx>=3.3",
  "numpy>=1.26.0",
  "pypdf>=4.3.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "email-validator>=2.2.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]
